# hangman

./: CMakeLists.txt  Layout.h  Renderable.h  String.h  Vec2.h  clip.txt  main.cpp
Renderable/: AnimatedSprite.h  Button.h  Renderable.h  SpriteSheet.h  Text.h
assets/: human.pdn  layout.drawio  template.pdn  words.txt
utils/: Random.h  Rect.h
